# libertai-inference

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 0b8ab94fc7d8_teams_v1.py  0b8b097922af_add_image_chats.py  1e2782da6aee_setup.py  2384d187fb7a_api_keys.py  265fe2ea9f1b_added_cached_tokens.py  2bccd793c8f4_drop_agents_and_agent_subscriptions.py  2d1af291db71_liberclaw_extra_credits.py  2e85144aa7a1_add_new_credit_tx_providers.py  3c3d3096b121_add_ltai_solana_and_sol_solana_enum_.py  3db1bab80c44_fix_provider_choices_constraint_with_.py  483879ab11ca_x402.py  491dd7c0450b_uuid_identity_swap_pk_and_fks.py  52e4c9d4a997_create_agents_and_subscriptions.py  53d9d68061c6_agents_final_updates.py  6548cd6fddde_fix_solana_provider_check_constraint.py  659d90b9b412_normalize_ethereum_addresses_with_fk_.py  6dc2425050f3_add_is_deleted_column_to_api_keys.py  7d265a4eacf9_setup.py  8524a5dd70f3_liberclaw.py  8c33166155b6_.py  915e4e040ba3_rename_credit_transaction_provider_2.py  94ae10b846bb_remove_agent_secret.py  955603fa8315_rename_credit_transaction_providers.py  9b74b3704ead_setup.py  9c41f2ab77d0_rename_power_tier_to_max.py  a10a2f472824_transaction_provider_as_enum.py  a1b2c3d4e5f6_drop_api_key_name_uniqueness.py  a7762573fc4b_update.py  a78cc4205d8d_users_is_libertai_staff.py  a7b8c9d0e1f2_api_key_soft_delete.py  a994022883c1_add_chat_requests.py  a9c3e5f7d1b2_anon_chat_usage_weekly_window.py  ac5b83fdb0cf_setup.py  ade7c91f8970_add_liberclaw_to_apikeytype_enum.py  b2c3d4e5f6a7_entitlement_windows.py  b2ddc7842398_add_transaction_status.py  (+21 more)
contracts/: LTAIPaymentProcessor.sol  LibertAIPaymentProcessor.sol
scripts/: dev.sh  migrate.py  setup_revolut.sh
src/: config.py  liberclaw_tiers.py  main.py  subscription_tiers.py  topup_packs.py
tests/: conftest.py  test_admin_list_enforcement.py  test_admin_list_invalid_reasons.py  test_anon_output_cap.py  test_anon_rate_limit.py  test_api_key_pool.py  test_api_key_soft_delete.py  test_audio_calculate_price.py  test_audio_pricing.py  test_audio_usage_endpoint.py  test_audio_x402_prices.py  test_auth_dependency.py  test_auth_me_staff.py  test_auth_methods.py  test_auth_routes.py  test_auth_tokens.py  test_chat_rate_limit.py  test_chat_usage_metering.py  test_cli_login.py  test_credit_service.py  test_credit_subscription.py  test_device_tokens.py  test_encryption.py  test_entitlement.py  test_extra_credit_cap.py  test_frontend_redirect.py  test_geo.py  test_harness.py  test_health.py  test_inference_call_billing.py  test_invalid_key_info.py  test_liberclaw_extra_credits.py  test_migration_backfill.py  test_oauth_redirect_base.py  test_payment_manager.py  test_payment_routes.py  test_payments_migration.py  test_payments_provider.py  test_pg_locks.py  test_profile_update.py  (+25 more)
(+152 files in other folders)
