[tool.poetry]
name = "libertai-inference"
version = "0.0.1"
description = ""
authors = ["Reza Rahemtola <49811529+RezaRahemtola@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://libertai.io"
repository = "https://github.com/LibertAI/libertai-inference"
documentation = "https://docs.libertai.io"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = { extras = ["standard"], version = "^0.114.1" }
apscheduler = "^3.10.4"
setuptools = "^78.1.1"
web3 = "^7.15.0"
httpx = ">=0.27"
sqlalchemy = { extras = ["mypy"], version = "^2.0.39" }
alembic = "^1.15.1"
psycopg = { extras = ["binary"], version = "^3.2.0" }
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
libertai-utils = "^0.0.16"
solana = "0.36.0"
aleph-sdk-python = "^2.0.2"
python-dateutil = "^2.9.0.post0"
authlib = "^1.7.2"
itsdangerous = "^2.2.0"
eth-account = "^0.13.7"
cryptography = "^48.0.0"
greenlet = "^3.5.1"
geoip2 = "^5.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.6.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.4.0"
freezegun = "^1.5.5"
types-python-dateutil = "^2.9.0.20260518"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"